Tia's blog and fix for bottom images not showing

--- a/content/static/css/main.css
+++ b/content/static/css/main.css
@@ -17,7 +17,7 @@ body {
 }
 
 .mainContent h1{
-    font-size: 18px;
+    font-size: 24pt;
 }
 
 .contentFeature {
